# agent-receipts

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SECURITY.md  cargo-deny.toml  gitleaks.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/scripts/: run-conformance.sh
.github/workflows/: ci.yml  conformance.yml  provenance.yml  release.yml
docs/: INTEGRATION.md  MAINTENANCE_POLICY.md  QUICKSTART.md
spec/: RATIONALE.md  THREAT_MODEL.md  batch-v1.schema.json  receipt-v1.schema.json
src/: lib.rs  main.rs
tests/: conformance.rs
testvectors/: MATRIX.md  README.md
testvectors/batches/: .gitkeep  duplicate-receipt-id.json  leaf-hash-mismatch.json  merkle-root-mismatch.json  proof-sibling-order-wrong.json  receipt-count-mismatch.json  two-receipts-valid-batch.json
testvectors/chains/: .gitkeep  cycle-in-lineage.json  missing-parent-reference.json  three-step-lineage.json
testvectors/invalid/: .gitkeep  malformed-base64-signature.json  malformed-ulid.json  missing-signature-field.json  signature-value-mutated.json  tampered-input-hash.json  tampered-output-hash.json  unsupported-signature-alg.json  wrong-public-key.json
testvectors/keys/: .gitkeep  ed25519-legacy.public.json  ml-dsa-87-primary.public.json  ml-dsa-87-secondary.public.json
testvectors/valid/: .gitkeep  legacy-ed25519.json  minimal-single-ml-dsa-87.json  reordered-json-fields.json  with-parent-receipt.json
