[package]
name = "agent-receipts"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Post-quantum receipt schema and verifier for AI agent actions"
repository = "https://github.com/authenticiq/agent-receipts"
rust-version = "1.94"

[[bin]]
name = "receipts"
path = "src/main.rs"

[[bin]]
name = "generate-fixtures"
path = "src/bin/generate_fixtures.rs"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
clap = { version = "4.5.50", features = ["derive"] }
ed25519-dalek = { version = "3.0.0-pre.6", features = ["rand_core"] }
hex = "0.4.3"
ml-dsa = "0.1.0-rc.8"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
time = { version = "0.3.44", features = ["formatting", "parsing"] }
